Update 06 - [Taller] - Exploracion de algoritmos de deteccion de anomalias.ipynb
Sebas en nIsolation Forest estaas utilizando las predicciones de One Class SVM, lo mismo en LOF

--- a/06 - [Taller] - Exploracion de algoritmos de deteccion de anomalias.ipynb
+++ b/06 - [Taller] - Exploracion de algoritmos de deteccion de anomalias.ipynb
@@ -614,7 +614,7 @@
     }
    ],
    "source": [
-    "clf = IsolationForest(n_estimators=20, warm_start=True)\n",
+    "clf = IsolationForest(n_estimators=30, warm_start=True)\n",
     "clf.fit(tr_data)"
    ]
   },
@@ -633,8 +633,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normal = tr_data[pred == 1]\n",
-    "abnormal = tr_data[pred == -1]"
+    "normal = tr_data[y_pred_train  == 1]\n",
+    "abnormal = tr_data[y_pred_train  == -1]"
    ]
   },
   {
@@ -707,8 +707,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normal = tr_data[pred == 1]\n",
-    "abnormal = tr_data[pred == -1]"
+    "normal = tr_data[y_pred == 1]\n",
+    "abnormal = tr_data[y_pred == -1]"
    ]
   },
   {
